# lexa

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
bench-results/: agent-auto.json  agent-fast.json  agent-lexa-real.json  compare-grep.json  latency-nomic.json  scifact-deep.json  scifact-instant-fast.json  simpleqa-mock-real.json  simpleqa-mock.json  simpleqa.json
bench/agent/: SKILL.md  queries.json
bench/simpleqa/: questions.json
crates/lexa-bench/: Cargo.toml
crates/lexa-bench/benches/: latency.rs
crates/lexa-bench/src/: main.rs
crates/lexa-cli/: Cargo.toml
crates/lexa-cli/src/: main.rs
crates/lexa-cli/tests/: e2e.rs
crates/lexa-core/: Cargo.toml
crates/lexa-core/src/: chunk.rs  db.rs  embed.rs  lib.rs  query.rs  search.rs  types.rs
crates/lexa-mcp/: Cargo.toml
crates/lexa-mcp/src/: main.rs
crates/lexa-mcp/tests/: stdio.rs
crates/lexa-obsidian/: Cargo.toml  README.md
crates/lexa-obsidian/src/: db.rs  frontmatter.rs  lib.rs  schema.rs  tags.rs  wikilinks.rs
demo-vault/: README.md
demo-vault/Daily/: 2026-04-30.md  2026-05-01.md
demo-vault/Projects/: Project Alpha.md  Project Beta.md
demo-vault/Research/: Hybrid Retrieval.md
docs/: ARCHITECTURE.md  BENCHMARKS.md  FAQ.md  THREAT_MODEL.md  launch.md
docs/adr/: 000-name.md  001-sqlite-vec.md  002-embeddings.md  003-chunking.md  004-tiers.md  005-mcp.md  006-obsidian.md
scripts/: install.sh
templates/: AGENTS.md
tests/fixtures/sample/: README.md  config.json  notes.txt
tests/fixtures/sample/src/: config.rs
