[workspace]
members = [
    "crates/lexa-core",
    "crates/lexa-cli",
    "crates/lexa-mcp",
    "crates/lexa-bench",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rishikhare/lexa"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
criterion = { version = "0.5", features = ["html_reports"] }
fastembed = "5.13"
notify = "6"
pdf-extract = "0.7"
rmcp = { version = "1.5", features = ["server", "macros", "schemars", "transport-io"] }
rusqlite = { version = "0.31", features = ["bundled", "blob"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlite-vec = "0.1"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util"] }
tree-sitter = "0.25"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
ureq = { version = "2", features = ["json"] }
walkdir = "2"
zip = "2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
