[workspace]
members = [
    "crates/lexa-core",
    "crates/lexa-cli",
    "crates/lexa-mcp",
    "crates/lexa-bench",
    "crates/lexa-obsidian",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rishiskhare/lexa"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
criterion = { version = "0.5", features = ["html_reports"] }
fastembed = "5.13"
notify = "6"
pdf-extract = "0.7"
rmcp = { version = "1.5", features = ["server", "macros", "schemars", "transport-io"] }
rusqlite = { version = "0.31", features = ["bundled", "blob"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sqlite-vec = "0.1"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util"] }
tree-sitter = "0.25"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
ureq = { version = "2", features = ["json"] }
walkdir = "2"
zip = "2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

# Generates the GitHub Release workflow + a `curl | sh` installer.
# Run `cargo dist init` to refresh, then `git tag v0.1.0 && git push --tags`
# to ship.
[workspace.metadata.dist]
cargo-dist-version = "0.21.1"
ci = "github"
installers = ["shell", "powershell"]
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
pr-run-mode = "plan"
allow-dirty = ["ci"]
# Skip the bench harness in release tarballs; it depends on repo-local
# fixtures and isn't useful standalone. Everything else ships.
publish-prereleases = true
