[package]
name = "lexa-bench"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false  # The harness is tightly coupled to repo-local fixtures
                 # (`bench/agent/queries.json`, `bench/simpleqa/questions.json`,
                 # the BEIR-download path under $TMPDIR), so installing it
                 # standalone via `cargo install` would not be useful. Run
                 # it from the cloned workspace via `cargo run -p lexa-bench`.

[dependencies]
anyhow.workspace = true
clap.workspace = true
lexa-core = { path = "../lexa-core" }
serde.workspace = true
serde_json.workspace = true
ureq.workspace = true
zip.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true

# Harness A — Criterion-based latency benchmarks. Run with:
#   cargo bench -p lexa-bench --bench latency
[[bench]]
name = "latency"
harness = false
