[package]
name = "lexa"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
lexa-core = { path = "../lexa-core" }
notify.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
