[package]
name = "lexa"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Lexa CLI: hybrid local search (BM25 + binary-quantized Matryoshka KNN + cross-encoder rerank) over arbitrary file trees. `lexa index <path>`, `lexa search <query>`, `lexa watch <path>`."
documentation = "https://docs.rs/lexa"
homepage = "https://github.com/rishiskhare/lexa"
readme = "../../README.md"
keywords = ["search", "retrieval", "code", "rag", "cli"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
lexa-core = { path = "../lexa-core", version = "0.1.1" }
notify.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
