[package]
name = "lexa-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Local-first hybrid retrieval engine: BM25 + binary-quantized Matryoshka KNN + cross-encoder rerank, in one Rust crate. Pairs with `lexa-obsidian` for vault-aware MCP."
documentation = "https://docs.rs/lexa-core"
homepage = "https://github.com/rishiskhare/lexa"
readme = "../../README.md"
keywords = ["search", "retrieval", "embedding", "rag", "sqlite-vec"]
categories = ["text-processing", "database", "command-line-utilities"]

[dependencies]
fastembed.workspace = true
pdf-extract.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlite-vec.workspace = true
thiserror.workspace = true
tree-sitter.workspace = true
tree-sitter-c.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-go.workspace = true
tree-sitter-java.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-python.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-typescript.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile = "3"
