[package]
name = "lexa-mcp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
lexa-core = { path = "../lexa-core" }
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
rmcp = { workspace = true, features = ["client", "transport-child-process"] }
tempfile = "3"
