[package]
name = "lexa-obsidian"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Local-first hybrid retrieval over an Obsidian vault. Ships an MCP stdio server (Codex / Claude Desktop / Cursor) and a CLI for indexing, search, backlinks, and tag listing."
documentation = "https://docs.rs/lexa-obsidian"
homepage = "https://github.com/rishiskhare/lexa"
readme = "README.md"
keywords = ["obsidian", "mcp", "search", "rag", "knowledge-base"]
categories = ["text-processing", "command-line-utilities"]

[lib]
name = "lexa_obsidian"
path = "src/lib.rs"

[[bin]]
name = "lexa-obsidian"
path = "src/bin/cli.rs"

[[bin]]
name = "lexa-obsidian-mcp"
path = "src/bin/mcp.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
lexa-core = { path = "../lexa-core", version = "0.1.0" }
notify.workspace = true
regex.workspace = true
rmcp.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
